see if webkit overflow scrolling will solve mobile scrolling problem

--- a/sq-front/src/index.css
+++ b/sq-front/src/index.css
@@ -38,7 +38,8 @@
 
 #root {
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: visible;
+  -webkit-overflow-scrolling: touch;
 }
 
 @media screen and (min-width: 1080px) {
